fixed color1 position and spacing of h1's for the fonts

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 	:root {
-			--off-white: #f8fdff;
-			--dark-blue: #292546;
-		}
+        /* font-size: 100%; */
+        --off-white: #f8fdff;
+        --dark-blue: #292546;
+    }
 		.site-title {
 			font-family: 'Caudex', serif;
 			font-size: 1.5em;
@@ -9,14 +10,14 @@
 
 		.editor {
 			display: grid;
-  			grid-template-columns: 12em 0em 24em 24em;
+  			grid-template-columns: 1fr 0fr 2fr 2fr;
 			background-color: var(--off-white);
 			border-style: solid;
 			border-width: 1px;
 			border-color: var(--dark-blue);
 			height: fit-content;
-			max-width: 60vw;
-			/* padding: 1em 15em 1em 15em; */
+			/* max-width: 60vw; */
+			padding: 0em 1em 1em 1em;
 /* 			overflow: visible; */        
             align-items: center;
 			overflow: hidden;
@@ -26,21 +27,22 @@
 			grid-template-columns: 1fr 1fr;
             justify-items: center;
             padding-bottom: 2rem;
+            padding-right: 1rem;
 		}
 		#color1{
 			background-color: #EBEBEB;
-			width: 5em;
-			height: 5em;
+			width: 6em;
+			height: 6em;
 			/* margin-left: -13em; */
-            margin-left: -6em;
+            /* margin-left: -9.5em; */
 			margin-top: 2em;
 			border-radius: 50%;
-			grid-column: 1/3;
+			grid-column: 1/2;
 			grid-row: 1/auto;
 		}
 		#color1:hover {
-			width: 6em;
-			height: 6em;
+			width: 7em;
+			height: 7em;
 			cursor: pointer;
 		}
 		#color1value {
@@ -48,12 +50,12 @@
 			position: absolute;
 			width: 2rem;
 			height: 2rem; 
-/* 			border-radius: 50%; */
+			/* border-radius: 50%; */
 		 }
 		#color2{
 			background-color: #C6CACC;
-			width: 5em;
-			height: 5em;
+			width: 6em;
+			height: 6em;
 			/* margin-left: -7em; */
 			margin-top: 2em;
 			border-radius: 50%;
@@ -61,8 +63,8 @@
 			grid-row: 1/auto;
 		}
 		#color2:hover {
-			width: 6em;
-			height: 6em;
+			width: 7em;
+			height: 7em;
 			cursor: pointer;
 		}
 		#color2value {
@@ -73,8 +75,8 @@
 		 }
 		#color3{
 			background-color: #BBB8D1;
-			width: 5em;
-			height: 5em;
+			width: 6em;
+			height: 6em;
 			/* margin-left: -13em; */
             margin-top: 10.5em;
 			border-radius: 50%;
@@ -82,8 +84,8 @@
 			grid-row: 1/auto;
 		}
 		#color3:hover {
-			width: 6em;
-			height: 6em;
+			width: 7em;
+			height: 7em;
 			cursor: pointer;
 		}
 		#color3value {
@@ -94,8 +96,8 @@
 		 }
 		#color4{
 			background-color: #798276;
-			width: 5em;
-			height: 5em;
+			width: 6em;
+			height: 6em;
 			/* margin-left: -7em; */
             margin-top: 10.5em;
 			border-radius: 50%;
@@ -103,8 +105,8 @@
 			grid-row: 1/auto;
 		}
 		#color4:hover {
-			width: 6em;
-			height: 6em;
+			width: 7em;
+			height: 7em;
 			cursor: pointer;
 		}
 		#color4value {
@@ -115,8 +117,8 @@
 		 }
 		#color5{
 			background-color: #B0BAAD;
-			width: 5em;
-			height: 5em;
+			width: 6em;
+			height: 6em;
 			/* margin-left: -13em; */
 			margin-top: 19em;
 			border-radius: 50%;
@@ -124,8 +126,8 @@
 			grid-row: 1/auto;
 		}
 		#color5:hover {
-			width: 6em;
-			height: 6em;
+			width: 7em;
+			height: 7em;
 			cursor: pointer;
 		}
 		#color5value {
@@ -136,8 +138,8 @@
 		 }
 		#color6{
 			background-color: #292546;
-			width: 5em;
-			height: 5em;
+			width: 6em;
+			height: 6em;
 			/* margin-left: -7em; */
 			margin-top: 19em;
 			border-radius: 50%;
@@ -145,8 +147,8 @@
 			grid-row: 1/auto;
 		}
 		#color6:hover {
-			width: 6em;
-			height: 6em;
+			width: 7em;
+			height: 7em;
 			cursor: pointer;
 		}
 		#color6value {
@@ -162,7 +164,7 @@
 		}
 		.h1f1 {
 			font-family:'Caudex', serif;
-			margin-bottom: -2rem;
+			/* margin-bottom: -2rem; */
 		}
 		.h3f1 {
 			font-family:'Caudex', serif;
@@ -180,7 +182,7 @@
 		}
 		.h1f2 {
 			font-family: 'Montserrat', sans-serif; 
-			margin-bottom: -2rem;
+			/* margin-bottom: -2rem; */
 		}
 		.h3f2 {
 			font-family: 'Montserrat', sans-serif; 
